2007-11-28 Benny Malengier <benny.malengier@gramps-project.org>
	* example/gramps/example.gramps: correct 3.0 example.gramps, stext is
	no longer used, xml no longer sorted on id on ouput.
	* src/gen/db/base.py: remove test code from Don

2007-11-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: remove internal from addmedia
	* src/AddMedia.py: remove internal
	* src/Editors/_EditMedia.py: remove internal note code
	Note: no upgrade code for this. Old internal notes will be connected to 
	a media object with type 'Note' and have as type 'Media Note', 
	up to the case a user deletes these media and changes note type to eg
	report or changes the path to a real media object.

2007-11-27  Jerome Rapinat <romjerome@yahoo.fr>
	* src/TipOfDay.py: remove uneeded sax escape, issue #1368

2007-11-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ManagedWindow.py: new call_modal method. 
				Reports tools should use that
	* src/GrampsWidgets.py: improve a text string
	* src/plugins/NarrativeWeb.py: use call_modal, trunkate long filter
				names, better placement of selector note/media
	* src/ReportBase/_BareReportDialog.py: reports are modal but not 
				transient, remove bug to make them transient!

2007-11-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/NarrativeWeb.py: new select contact-header-footer-intro
	* src/GrampsWidgets.py: widget for new select

2007-11-26 Jim Sack <jgsack@san.rr.com>
	*  src/plugins/ReadPkg.py : reverted previous change
	better to leave it broken than to risk worse

2007-11-26 Jim Sack <jgsack@san.rr.com>
	* src/plugins/ReadPkg.py : #1096 add isfile() before remove()
        Note: this may be part a larger "relative path" problem 

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/Utils.py : add get_empty_tempdir() and rm_tempdir()
	* src/ArgHandler.py : use get_empty_tempdir, etc
	* src/test/gramps_cli_test.py : update test for new import dir